beginning of swagger client wrapper plus some tests
